# vlaina

./: .gitignore  AGENT.md  AGENTS.md  AI_GUIDELINES.md  CALENDAR_INTERACTION_CHECKLIST.md  CONTRIBUTING.md  DESIGN_GUIDELINES.md  GEMINI.md  NEKOTICK_BLUEPRINT.md  PRIVACY.md  README.md  TERMS.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  agent.md  all-icons.txt  electron-builder.yml  index.html  lucide-icons-clean.txt  lucide-icons.txt  nul  package.json  playwright.e2e.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  unused-icons.txt  vite.config.ts  vitest.config.ts  vitest.theme-compat-audit.config.ts  wrangler.jsonc  wrangler.production.jsonc
docs/: AI_GUIDELINES.md  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/account/: ai_secret_commands.rs  ai_secret_store.rs  credentials.rs  credentials_meta_store.rs  credentials_secret_store.rs  mod.rs  types.rs
src-tauri/src/credentials/: commands.rs  encrypted_store.rs  error.rs  migration.rs  mod.rs
src-tauri/src/github/: auth_commands.rs  commands.rs  config_commands.rs  config_sync.rs  config_sync_local.rs  config_sync_support.rs  credentials.rs  credentials_meta_store.rs  credentials_secret_store.rs  gist_api.rs  git_commands.rs  git_ops.rs  mod.rs  oauth.rs  repo_commands.rs  repos.rs  types.rs
src-tauri/src/google_drive/: commands.rs  drive_api.rs  keyring_store.rs  mod.rs  oauth.rs
src-tauri/src/license/: api.rs  commands.rs  device_id.rs  error.rs  manager.rs  mod.rs  store.rs
(+4769 files in other folders)
