[package]
name = "vlaina"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vlaina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Account auth dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
futures-util = "0.3"

trash = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "thin"
